--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       
       // Map our period names to FMP API field names
       const periodMap = {
-        '1W': '1W',
+        '1W': '5D',   // FMP uses 5D for weekly
         '1M': '1M',
         '3M': '3M',
         '6M': '6M',
